<resources>
    <string name="app_name">TODO-MVVM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">TODO-MVVM</string>
    <string name="nav_header_subtitle">null</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_all">All</string>
    <string name="action_active">Active</string>
    <string name="action_completed">Completed</string>

    <string name="menu_todo_list">TODO List</string>
    <string name="menu_statistic">Statistics</string>
    <string name="info">Info</string>

    <string name="hint_title">Title</string>
    <string name="hint_TODO">TODO</string>

    <string name="action_del">delete</string>
    <string name="action_rez">rez</string>

    <string name="all">All: </string>
    <string name="active">Active:</string>
    <string name="completed">Completed:</string>
</resources>