<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_todo_list">

    <fragment
        android:id="@+id/nav_todo_list"
        android:name="com.igld279.todo_mvvm.ui.notes.NotesFragment"
        android:label="@string/menu_todo_list"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.igld279.todo_mvvm.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.igld279.todo_mvvm.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>